<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/final_dialog">

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_dialog_background"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/dialog2_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dialog2_message"
                    android:textColor="@android:color/black"
                    android:id="@+id/conqueror"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/zero"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:id="@+id/tvWinner"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_dialog_background"
                android:gravity="center"
                android:text="@string/new_game"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnQuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_dialog_background"
                android:gravity="center"
                android:text="@string/quit"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>