<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog">

    <LinearLayout
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_dialog_background"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/dialog1_message"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup

                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="-1dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/play_white"
                    android:textColor="@color/radio_flat_text_selector"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-1dp"
                    android:background="@drawable/radio_flat_selector"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/play_black"
                    android:textColor="@color/radio_flat_text_selector"
                    android:textSize="18sp"
                    tools:ignore="RtlHardcoded" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnPlayWithoutAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_dialog_background"
                android:gravity="center"
                android:text="@string/player_vs_player"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlayWithAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_dialog_background"
                android:gravity="center"
                android:text="@string/ai_vs_player"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>