<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:layout_gravity="center_horizontal"
    android:id="@+id/content_main">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <LinearLayout
            android:layout_marginTop="40dp"
            android:id="@+id/linMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_game"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/btnPlay"
                android:background="@drawable/button"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/round_corners_area">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/current_turn"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/game_ready"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tvTurn"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_white"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:layout_weight="3"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tvWhiteScore"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_black"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/zero"
                        android:padding="5dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:id="@+id/tvBlackScore"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/game_board"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/animator"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pieceAnim"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pieceAnim2"/>
    </LinearLayout>
</RelativeLayout>
